cleaned up project somewhat, plus moved shaders into cocos2dx project
--HG--
rename : HelloWorld/Assets/Textures/CCDrawingPixelShader.hlsl => cocos2dx/shaders/CCDrawingPixelShader.hlsl
rename : HelloWorld/Assets/Textures/CCDrawingVertexShader.hlsl => cocos2dx/shaders/CCDrawingVertexShader.hlsl
rename : HelloWorld/Assets/Textures/CCGridPixelShader.hlsl => cocos2dx/shaders/CCGridPixelShader.hlsl
rename : HelloWorld/Assets/Textures/CCGridVertexShader.hlsl => cocos2dx/shaders/CCGridVertexShader.hlsl
rename : HelloWorld/Assets/Textures/CCLayerColorPixelShader.hlsl => cocos2dx/shaders/CCLayerColorPixelShader.hlsl
rename : HelloWorld/Assets/Textures/CCLayerColorVertexShader.hlsl => cocos2dx/shaders/CCLayerColorVertexShader.hlsl
rename : HelloWorld/Assets/Textures/CCParticlePixelShader.hlsl => cocos2dx/shaders/CCParticlePixelShader.hlsl
rename : HelloWorld/Assets/Textures/CCParticleVertexShader.hlsl => cocos2dx/shaders/CCParticleVertexShader.hlsl
rename : HelloWorld/Assets/Textures/CCProgressTimerPixelShader.hlsl => cocos2dx/shaders/CCProgressTimerPixelShader.hlsl
rename : HelloWorld/Assets/Textures/CCProgressTimerVertexShader.hlsl => cocos2dx/shaders/CCProgressTimerVertexShader.hlsl
rename : HelloWorld/Assets/Textures/CCSpritePixelShader.hlsl => cocos2dx/shaders/CCSpritePixelShader.hlsl
rename : HelloWorld/Assets/Textures/CCSpriteVertexShader.hlsl => cocos2dx/shaders/CCSpriteVertexShader.hlsl
rename : HelloWorld/Assets/Textures/CCTexture2DPixelShader.hlsl => cocos2dx/shaders/CCTexture2DPixelShader.hlsl
rename : HelloWorld/Assets/Textures/CCTexture2DVertexShader.hlsl => cocos2dx/shaders/CCTexture2DVertexShader.hlsl
rename : HelloWorld/Assets/Textures/CCTextureAtlasPixelShader.hlsl => cocos2dx/shaders/CCTextureAtlasPixelShader.hlsl
rename : HelloWorld/Assets/Textures/CCTextureAtlasVertexShader.hlsl => cocos2dx/shaders/CCTextureAtlasVertexShader.hlsl

--- a/CocosDenshion/proj.winrt/CocosDension.vcxproj
+++ b/CocosDenshion/proj.winrt/CocosDension.vcxproj
@@ -53,19 +53,6 @@
   <ImportGroup Label="PropertySheets">
     <Import Project="$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props" Condition="exists('$(UserRootDir)\Microsoft.Cpp.$(Platform).user.props')" Label="LocalAppDataPlatform" />
   </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|ARM'">
-    <Import Project="..\..\.build\uses_cocos2dx.props" />
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
-    <Import Project="..\..\.build\uses_cocos2dx.props" />
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
-    <Import Project="..\..\.build\uses_cocos2dx.props" />
-  </ImportGroup>
-  <ImportGroup Label="PropertySheets" Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
-    <Import Project="..\..\.build\uses_cocos2dx.props" />
-  </ImportGroup>
-  <PropertyGroup Label="UserMacros" />
   <PropertyGroup>
     <GenerateManifest>false</GenerateManifest>
   </PropertyGroup>
@@ -76,7 +63,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
-      <AdditionalIncludeDirectories>../;../include/;$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../;../include/;../../cocos2dx/include/;../../cocos2dx/platform/;../../cocos2dx/platform/win8_metro/;$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WarningLevel>Level4</WarningLevel>
     </ClCompile>
     <Link>
@@ -95,7 +82,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
-      <AdditionalIncludeDirectories>../;../include/;$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>../;../include/;../../cocos2dx/include/;../../cocos2dx/platform/;../../cocos2dx/platform/win8_metro/;$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <WarningLevel>Level4</WarningLevel>
     </ClCompile>
     <Link>
@@ -114,6 +101,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
+      <AdditionalIncludeDirectories>../;../include/;../../cocos2dx/include/;../../cocos2dx/platform/;../../cocos2dx/platform/win8_metro/;$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -129,6 +117,7 @@
       <PrecompiledHeaderFile>pch.h</PrecompiledHeaderFile>
       <AdditionalUsingDirectories>$(WindowsSDK_MetadataPath);$(AdditionalUsingDirectories)</AdditionalUsingDirectories>
       <CompileAsWinRT>true</CompileAsWinRT>
+      <AdditionalIncludeDirectories>../;../include/;../../cocos2dx/include/;../../cocos2dx/platform/;../../cocos2dx/platform/win8_metro/;$(GeneratedFilesDir);$(IntDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
