--- a/Cocos2d-WindowsPhone.vcxproj
+++ b/Cocos2d-WindowsPhone.vcxproj
@@ -24,7 +24,7 @@
     <DefaultLanguage>en-US</DefaultLanguage>
     <MinimumVisualStudioVersion>11.0</MinimumVisualStudioVersion>
     <WinMDAssembly>true</WinMDAssembly>
-    <ProjectName>Cocos2d-WindowsPhone</ProjectName>
+    <ProjectName>Cocos2dWindowsPhone</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
