--- a/Cocos2d-WindowsPhone.vcxproj
+++ b/Cocos2d-WindowsPhone.vcxproj
@@ -79,6 +79,22 @@
       <Command>cp $(OutDir)$(TargetName).dll .\libraries\$(PlatformTarget)\$(TargetName).dll
 cp $(OutDir)$(TargetName).lib .\libraries\$(PlatformTarget)\$(TargetName).lib
 cp $(OutDir)Cocos2dWindowsPhone.winmd .\libraries\$(PlatformTarget)\Cocos2dWindowsPhone.winmd
+cp $(OutDir)CCDrawingPixelShader.cso .\libraries\$(PlatformTarget)\CCDrawingPixelShader.cso
+cp $(OutDir)CCDrawingVertexShader.cso .\libraries\$(PlatformTarget)\CCDrawingVertexShader.cso
+cp $(OutDir)CCGridPixelShader.cso .\libraries\$(PlatformTarget)\CCGridPixelShader.cso
+cp $(OutDir)CCGridVertexShader.cso .\libraries\$(PlatformTarget)\CCGridVertexShader.cso
+cp $(OutDir)CCLayerColorPixelShader.cso .\libraries\$(PlatformTarget)\CCLayerColorPixelShader.cso
+cp $(OutDir)CCLayerColorVertexShader.cso .\libraries\$(PlatformTarget)\CCLayerColorVertexShader.cso
+cp $(OutDir)CCParticlePixelShader.cso .\libraries\$(PlatformTarget)\CCParticlePixelShader.cso
+cp $(OutDir)CCParticleVertexShader.cso .\libraries\$(PlatformTarget)\CCParticleVertexShader.cso
+cp $(OutDir)CCProgressTimerPixelShader.cso .\libraries\$(PlatformTarget)\CCProgressTimerPixelShader.cso
+cp $(OutDir)CCProgressTimerVertexShader.cso .\libraries\$(PlatformTarget)\CCProgressTimerVertexShader.cso
+cp $(OutDir)CCSpritePixelShader.cso .\libraries\$(PlatformTarget)\CCSpritePixelShader.cso
+cp $(OutDir)CCSpriteVertexShader.cso .\libraries\$(PlatformTarget)\CCSpriteVertexShader.cso
+cp $(OutDir)CCTexture2DPixelShader.cso .\libraries\$(PlatformTarget)\CCTexture2DPixelShader.cso
+cp $(OutDir)CCTexture2DVertexShader.cso .\libraries\$(PlatformTarget)\CCTexture2DVertexShader.cso
+cp $(OutDir)CCTextureAtlasPixelShader.cso .\libraries\$(PlatformTarget)\CCTextureAtlasPixelShader.cso
+cp $(OutDir)CCTextureAtlasVertexShader.cso .\libraries\$(PlatformTarget)\CCTextureAtlasVertexShader.cso
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -111,6 +127,22 @@ cp $(OutDir)Cocos2dWindowsPhone.winmd .\libraries\$(PlatformTarget)\Cocos2dWindo
       <Command>cp $(OutDir)$(TargetName).dll .\libraries\$(PlatformTarget)\$(TargetName).dll
 cp $(OutDir)$(TargetName).lib .\libraries\$(PlatformTarget)\$(TargetName).lib
 cp $(OutDir)Cocos2dWindowsPhone.winmd .\libraries\$(PlatformTarget)\Cocos2dWindowsPhone.winmd
+cp $(OutDir)CCDrawingPixelShader.cso .\libraries\$(PlatformTarget)\CCDrawingPixelShader.cso
+cp $(OutDir)CCDrawingVertexShader.cso .\libraries\$(PlatformTarget)\CCDrawingVertexShader.cso
+cp $(OutDir)CCGridPixelShader.cso .\libraries\$(PlatformTarget)\CCGridPixelShader.cso
+cp $(OutDir)CCGridVertexShader.cso .\libraries\$(PlatformTarget)\CCGridVertexShader.cso
+cp $(OutDir)CCLayerColorPixelShader.cso .\libraries\$(PlatformTarget)\CCLayerColorPixelShader.cso
+cp $(OutDir)CCLayerColorVertexShader.cso .\libraries\$(PlatformTarget)\CCLayerColorVertexShader.cso
+cp $(OutDir)CCParticlePixelShader.cso .\libraries\$(PlatformTarget)\CCParticlePixelShader.cso
+cp $(OutDir)CCParticleVertexShader.cso .\libraries\$(PlatformTarget)\CCParticleVertexShader.cso
+cp $(OutDir)CCProgressTimerPixelShader.cso .\libraries\$(PlatformTarget)\CCProgressTimerPixelShader.cso
+cp $(OutDir)CCProgressTimerVertexShader.cso .\libraries\$(PlatformTarget)\CCProgressTimerVertexShader.cso
+cp $(OutDir)CCSpritePixelShader.cso .\libraries\$(PlatformTarget)\CCSpritePixelShader.cso
+cp $(OutDir)CCSpriteVertexShader.cso .\libraries\$(PlatformTarget)\CCSpriteVertexShader.cso
+cp $(OutDir)CCTexture2DPixelShader.cso .\libraries\$(PlatformTarget)\CCTexture2DPixelShader.cso
+cp $(OutDir)CCTexture2DVertexShader.cso .\libraries\$(PlatformTarget)\CCTexture2DVertexShader.cso
+cp $(OutDir)CCTextureAtlasPixelShader.cso .\libraries\$(PlatformTarget)\CCTextureAtlasPixelShader.cso
+cp $(OutDir)CCTextureAtlasVertexShader.cso .\libraries\$(PlatformTarget)\CCTextureAtlasVertexShader.cso
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -135,6 +167,22 @@ cp $(OutDir)Cocos2dWindowsPhone.winmd .\libraries\$(PlatformTarget)\Cocos2dWindo
       <Command>cp $(OutDir)$(TargetName).dll .\libraries\$(PlatformTarget)\$(TargetName).dll
 cp $(OutDir)$(TargetName).lib .\libraries\$(PlatformTarget)\$(TargetName).lib
 cp $(OutDir)Cocos2dWindowsPhone.winmd .\libraries\$(PlatformTarget)\Cocos2dWindowsPhone.winmd
+cp $(OutDir)CCDrawingPixelShader.cso .\libraries\$(PlatformTarget)\CCDrawingPixelShader.cso
+cp $(OutDir)CCDrawingVertexShader.cso .\libraries\$(PlatformTarget)\CCDrawingVertexShader.cso
+cp $(OutDir)CCGridPixelShader.cso .\libraries\$(PlatformTarget)\CCGridPixelShader.cso
+cp $(OutDir)CCGridVertexShader.cso .\libraries\$(PlatformTarget)\CCGridVertexShader.cso
+cp $(OutDir)CCLayerColorPixelShader.cso .\libraries\$(PlatformTarget)\CCLayerColorPixelShader.cso
+cp $(OutDir)CCLayerColorVertexShader.cso .\libraries\$(PlatformTarget)\CCLayerColorVertexShader.cso
+cp $(OutDir)CCParticlePixelShader.cso .\libraries\$(PlatformTarget)\CCParticlePixelShader.cso
+cp $(OutDir)CCParticleVertexShader.cso .\libraries\$(PlatformTarget)\CCParticleVertexShader.cso
+cp $(OutDir)CCProgressTimerPixelShader.cso .\libraries\$(PlatformTarget)\CCProgressTimerPixelShader.cso
+cp $(OutDir)CCProgressTimerVertexShader.cso .\libraries\$(PlatformTarget)\CCProgressTimerVertexShader.cso
+cp $(OutDir)CCSpritePixelShader.cso .\libraries\$(PlatformTarget)\CCSpritePixelShader.cso
+cp $(OutDir)CCSpriteVertexShader.cso .\libraries\$(PlatformTarget)\CCSpriteVertexShader.cso
+cp $(OutDir)CCTexture2DPixelShader.cso .\libraries\$(PlatformTarget)\CCTexture2DPixelShader.cso
+cp $(OutDir)CCTexture2DVertexShader.cso .\libraries\$(PlatformTarget)\CCTexture2DVertexShader.cso
+cp $(OutDir)CCTextureAtlasPixelShader.cso .\libraries\$(PlatformTarget)\CCTextureAtlasPixelShader.cso
+cp $(OutDir)CCTextureAtlasVertexShader.cso .\libraries\$(PlatformTarget)\CCTextureAtlasVertexShader.cso
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
@@ -160,6 +208,22 @@ cp $(OutDir)Cocos2dWindowsPhone.winmd .\libraries\$(PlatformTarget)\Cocos2dWindo
       <Command>cp $(OutDir)$(TargetName).dll .\libraries\$(PlatformTarget)\$(TargetName).dll
 cp $(OutDir)$(TargetName).lib .\libraries\$(PlatformTarget)\$(TargetName).lib
 cp $(OutDir)Cocos2dWindowsPhone.winmd .\libraries\$(PlatformTarget)\Cocos2dWindowsPhone.winmd
+cp $(OutDir)CCDrawingPixelShader.cso .\libraries\$(PlatformTarget)\CCDrawingPixelShader.cso
+cp $(OutDir)CCDrawingVertexShader.cso .\libraries\$(PlatformTarget)\CCDrawingVertexShader.cso
+cp $(OutDir)CCGridPixelShader.cso .\libraries\$(PlatformTarget)\CCGridPixelShader.cso
+cp $(OutDir)CCGridVertexShader.cso .\libraries\$(PlatformTarget)\CCGridVertexShader.cso
+cp $(OutDir)CCLayerColorPixelShader.cso .\libraries\$(PlatformTarget)\CCLayerColorPixelShader.cso
+cp $(OutDir)CCLayerColorVertexShader.cso .\libraries\$(PlatformTarget)\CCLayerColorVertexShader.cso
+cp $(OutDir)CCParticlePixelShader.cso .\libraries\$(PlatformTarget)\CCParticlePixelShader.cso
+cp $(OutDir)CCParticleVertexShader.cso .\libraries\$(PlatformTarget)\CCParticleVertexShader.cso
+cp $(OutDir)CCProgressTimerPixelShader.cso .\libraries\$(PlatformTarget)\CCProgressTimerPixelShader.cso
+cp $(OutDir)CCProgressTimerVertexShader.cso .\libraries\$(PlatformTarget)\CCProgressTimerVertexShader.cso
+cp $(OutDir)CCSpritePixelShader.cso .\libraries\$(PlatformTarget)\CCSpritePixelShader.cso
+cp $(OutDir)CCSpriteVertexShader.cso .\libraries\$(PlatformTarget)\CCSpriteVertexShader.cso
+cp $(OutDir)CCTexture2DPixelShader.cso .\libraries\$(PlatformTarget)\CCTexture2DPixelShader.cso
+cp $(OutDir)CCTexture2DVertexShader.cso .\libraries\$(PlatformTarget)\CCTexture2DVertexShader.cso
+cp $(OutDir)CCTextureAtlasPixelShader.cso .\libraries\$(PlatformTarget)\CCTextureAtlasPixelShader.cso
+cp $(OutDir)CCTextureAtlasVertexShader.cso .\libraries\$(PlatformTarget)\CCTextureAtlasVertexShader.cso
 </Command>
     </PostBuildEvent>
   </ItemDefinitionGroup>
